<resources>
    <string name="gf_app_name">Google Feedback</string>
    <string name="gf_back">Back</string>
    <string name="gf_feedback">Feedback</string>
    <string name="gf_user_account">User Account</string>
    <string name="gf_anonymous">Anonymous</string>
    <string name="gf_choose_an_account">Choose an account</string>
    <string name="gf_report_feedback">Report An Issue</string>
    <string name="gf_screenshot_preview">Screenshot Preview</string>
    <string name="gf_preview">Preview</string>
    <string name="gf_send">Send</string>
    <string name="gf_preview_feedback">Preview feedback</string>
    <string name="gf_no_data">No data</string>
    <string name="gf_privacy">Privacy</string>
    <string name="gf_include_system_data">Include system data</string>
    <string name="gf_include_screenshot">Include screenshot</string>
    <string name="gf_this_will_help">Share system data with Google, to better diagnose the problem.</string>
    <string name="gf_this_will_help_screenshot">Send screenshot of the last page you were on.</string>
    <string name="gf_unknown_app">Unknown application</string>
    <string name="gf_report_being_sent">Thanks, your report is being sent.</string>
    <string name="gf_report_sent_failure">Sorry, there was an error sending your report.</string>
    <string name="gf_report_queued">Your device seems to be offline. We will retry when you are connected.</string>
    <string name="gf_optional_description">Description (optional)</string>
    <string name="gf_system_log">System Log</string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_done_key">Done</string>
    <string name="label_send_key">Send</string>
    <string name="label_clear_key">Clear</string>
    <string name="setting_vibration_strength_on_keypress_title">Vibration strength on keypress</string>
    <string name="setting_vibration_strength_on_keypress_text_left">Weak</string>
    <string name="setting_vibration_strength_on_keypress_text_right">Strong</string>
    <string name="setting_keyboard_slide_sensitivity_ratio_title">Slide input sensitivity</string>
    <string name="setting_keyboard_slide_sensitivity_ratio_text_left">Low</string>
    <string name="setting_keyboard_slide_sensitivity_ratio_text_right">High</string>
    <string name="setting_keyboard_height_ratio_title">Keyboard height</string>
    <string name="setting_keyboard_height_ratio_text_left">Short</string>
    <string name="setting_keyboard_height_ratio_text_right">Tall</string>
    <string name="setting_key_long_press_delay_title">Key long press delay</string>
    <string name="setting_key_long_press_delay_text_left">Short</string>
    <string name="setting_key_long_press_delay_text_right">Long</string>
    <string name="setting_keyboard_theme_title">Keyboard theme</string>
    <string name="setting_switch_to_other_imes_title">Switch to other input methods</string>
    <string name="setting_switch_to_other_imes_summary">Language switch key switches to other input methods</string>
    <string name="enter_key_content_desc">Enter</string>
    <string name="search_key_content_desc">Search</string>
    <string name="delete_key_content_desc">Delete</string>
    <string name="page_up_key_content_desc">Page up</string>
    <string name="page_down_key_content_desc">Page down</string>
    <string name="minus_key_content_desc">Minus</string>
    <string name="smiley_keyboard_key_content_desc">Smiley keyboard</string>
    <string name="left_double_quotation_key_content_desc">Left double quotation mark</string>
    <string name="right_double_quotation_key_content_desc">Right double quotation mark</string>
    <string name="left_single_quotation_key_content_desc">Left single quotation mark</string>
    <string name="right_single_quotation_key_content_desc">Right single quotation mark</string>
    <string name="left_vertical_double_quotation_key_content_desc">Left vertical double quotation mark</string>
    <string name="right_vertical_double_quotation_key_content_desc">Right vertical double quotation mark</string>
    <string name="left_vertical_single_quotation_key_content_desc">Left vertical single quotation mark</string>
    <string name="right_vertical_single_quotation_key_content_desc">Right vertical single quotation mark</string>
    <string name="full_width_left_parenthesis_key_content_desc">Full width left parenthesis</string>
    <string name="full_width_right_parenthesis_key_content_desc">Full width right parenthesis</string>
    <string name="slight_pause_mark_key_content_desc">Slight pause mark</string>
    <string name="full_width_colon_key_content_desc">Full width colon</string>
    <string name="full_width_semicolon_key_content_desc">Full width semicolon</string>
    <string name="full_width_question_mark_key_content_desc">Full width question mark</string>
    <string name="full_width_exclamation_key_content_desc">Full width exclamation</string>
    <string name="full_width_tilde_key_content_desc">Full width tilde</string>
    <string name="full_width_ellipsis_key_content_desc">Full width ellipsis</string>
    <string name="middle_dot_key_content_desc">Middle dot</string>
    <string name="left_black_square_bracket_key_content_desc">Left black square bracket</string>
    <string name="right_black_square_bracket_key_content_desc">Right black square bracket</string>
    <string name="left_hexagon_bracket_key_content_desc">Left hexagon bracket</string>
    <string name="right_hexagon_bracket_key_content_desc">Right hexagon bracket</string>
    <string name="single_left_book_title_key_content_desc">Single left book title mark</string>
    <string name="single_right_book_title_key_content_desc">Single right book title mark</string>
    <string name="double_left_book_title_key_content_desc">Double left book title mark</string>
    <string name="double_right_book_title_key_content_desc">Double right book title mark</string>
    <string name="up_arrow_key_content_desc">Up arrow</string>
    <string name="down_arrow_key_content_desc">Down arrow</string>
    <string name="left_arrow_key_content_desc">Left arrow</string>
    <string name="right_arrow_key_content_desc">Right arrow</string>
    <string name="setting_about_title">About</string>
    <string name="pref_key_english_prediction">enable_english_prediction</string>
    <string name="pref_key_spell_correction">enable_spell_correction</string>
    <string name="pref_key_auto_capitalization">enable_auto_capitalization</string>
    <string name="pref_key_auto_space_smart_punctuation">enable_auto_space_smart_punctuation</string>
    <string name="pref_key_enable_user_metrics">enable_user_metrics</string>
    <string name="pref_key_enable_sound_on_keypress">enable_sound_on_keypress</string>
    <string name="pref_key_sound_volume_on_keypress">sound_volume</string>
    <string name="pref_key_enable_vibrate_on_keypress">enable_vibrate_on_keypress</string>
    <string name="pref_key_enable_popup_on_keypress">enable_popup_on_keypress</string>
    <string name="pref_key_vibration_duration_on_keypress">vibration_duration</string>
    <string name="pref_key_enable_voice_input">enable_voice_input</string>
    <string name="pref_key_enable_spatial_model">enable_spatial_model</string>
    <string name="pref_key_keyboard_slide_sensitivity_ratio">keyboard_slide_sensitivity_ratio</string>
    <string name="pref_def_value_keyboard_slide_sensitivity_ratio">1.0</string>
    <string name="pref_key_keyboard_height_ratio">keyboard_height_ratio</string>
    <string name="pref_def_value_keyboard_height_ratio">1.0</string>
    <string name="pref_key_key_long_press_delay">key_long_press_delay</string>
    <string name="pref_def_value_key_long_press_delay">400</string>
    <string name="pref_key_keyboard_theme">keyboard_theme</string>
    <string name="pref_def_value_keyboard_theme">dark_theme</string>
    <string name="pref_key_switch_to_other_imes">switch_to_other_imes</string>
    <string name="setting_keyboard_key">setting_keyboard_key</string>
    <string name="pref_key_enable_gesture_input">enable_gesture_input</string>
    <string name="pref_key_enable_incremental_gesture_input">enable_incremental_gesture_input</string>
    <string name="pref_key_enable_gesture_auto_commit">enable_gesture_auto_commit</string>
    <string name="user_metrics_hint">Send anonymous usage statistics to help improve Google Input Tool!</string>
    <string name="user_metrics_accept">Accept</string>
    <string name="tutorial_congratulations">Ready now!</string>
    <string name="setting_other_category_title">Others</string>
    <string name="setting_prediction_chinese_title">Chinese prediction</string>
    <string name="setting_prediction_chinese_summary">Use previous word to make suggestions</string>
    <string name="setting_auto_completion_english_title">Auto completion</string>
    <string name="setting_spell_correction_title">Auto spell correction</string>
    <string name="setting_spell_correction_summary">Automatically correct mistyped words</string>
    <string name="setting_auto_capitalization_title">Auto capitalization</string>
    <string name="setting_auto_capitalization_summary">Capitalize the first word of each sentence</string>
    <string name="setting_auto_space_smart_punctuation_title">Auto space insertion</string>
    <string name="setting_auto_space_smart_punctuation_summary">Automatically insert space between words</string>
    <string name="setting_tradition_title">Traditional Chinese</string>
    <string name="setting_chinese_intelligent_correction_title">Intelligent correction</string>
    <string name="setting_chinese_intelligent_correction_summary">Intelligently correct mistyped words</string>
    <string name="setting_input">Input</string>
    <string name="setting_chinese_input">Chinese input</string>
    <string name="setting_english_input">English input</string>
    <string name="setting_handwriting_input">Handwriting</string>
    <string name="setting_keyboard">Keyboard</string>
    <string name="setting_dictionary">Dictionary</string>
    <string name="setting_send_feedback_title">Send feedback</string>
    <string name="setting_tutorial_title">Usage tips</string>
    <string name="setting_sound_on_keypress_title">Sound on keypress</string>
    <string name="setting_sound_volume_of_keypress">Volume on keypress</string>
    <string name="setting_vibrate_on_keypress_title">Vibrate on keypress</string>
    <string name="setting_popup_on_keypress_title">Popup on keypress</string>
    <string name="setting_voice_input_title">Show voice input button</string>
    <string name="pref_key_chinese_prediction">enable_chinese_prediction</string>
    <string name="pref_key_enable_sc_tc_conversion">enable_sc_tc_conversion</string>
    <string name="setting_title">Google Pinyin Input settings</string>
    <string name="setting_gesture_input_title">Gesture typing</string>
    <string name="setting_gesture_input_summary">Input a word by sliding through the letters</string>
    <string name="setting_gesture_input_preview_title">Dynamic suggestion preview</string>
    <string name="setting_gesture_input_preview_summary">Show the suggested word while gesturing</string>
    <string name="setting_fuzzy_pinyin_title">Fuzzy Pinyin</string>
    <string name="setting_fuzzy_pinyin_detail_title">Fuzzy Pinyin settings</string>
    <string name="setting_chinese_english_mixed_input_title">Suggest English words</string>
    <string name="setting_chinese_english_mixed_input_summary">Suggest popular English words when inputting Pinyin</string>
    <string name="setting_gesture_auto_commit_title">Auto commit gesture input</string>
    <string name="setting_gesture_auto_commit_summary">Auto commit the current composing text before the next gesture input</string>
    <string name="pref_key_chinese_english_mixed_input">chinese_english_mixed_input</string>
    <string name="pref_key_fuzzy_pinyin">fuzzy_pinyin</string>
</resources>