<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/setting_keyboard" android:key="@string/setting_keyboard_key"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:entries="@array/entries_keyboard_theme" android:title="@string/setting_keyboard_theme_title" android:key="@string/pref_key_keyboard_theme" android:defaultValue="@string/pref_def_value_keyboard_theme" android:dialogTitle="@string/setting_keyboard_theme_title" android:entryValues="@array/entryvalues_keyboard_theme" />
    <CheckBoxPreference android:persistent="true" android:title="@string/setting_sound_on_keypress_title" android:key="@string/pref_key_enable_sound_on_keypress" />
    <com.google.android.apps.inputmethod.libs.framework.preference.widget.VolumePreference android:persistent="true" android:max="50" android:title="@string/setting_sound_volume_of_keypress" android:key="@string/pref_key_sound_volume_on_keypress" android:dependency="@string/pref_key_enable_sound_on_keypress" />
    <CheckBoxPreference android:persistent="true" android:title="@string/setting_vibrate_on_keypress_title" android:key="@string/pref_key_enable_vibrate_on_keypress" />
    <com.google.android.apps.inputmethod.libs.framework.preference.widget.VibrationDurationPreference android:persistent="true" android:entries="@array/entries_vibration_strength_on_keypress" android:title="@string/setting_vibration_strength_on_keypress_title" android:key="@string/pref_key_vibration_duration_on_keypress" android:dependency="@string/pref_key_enable_vibrate_on_keypress" android:entryValues="@array/entryvalues_vibration_duration_on_keypress" seek_bar_text_left="@string/setting_vibration_strength_on_keypress_text_left" seek_bar_text_right="@string/setting_vibration_strength_on_keypress_text_right" />
    <CheckBoxPreference android:persistent="true" android:title="@string/setting_popup_on_keypress_title" android:key="@string/pref_key_enable_popup_on_keypress" />
    <CheckBoxPreference android:persistent="true" android:title="@string/setting_voice_input_title" android:key="@string/pref_key_enable_voice_input" />
    <CheckBoxPreference android:persistent="true" android:title="@string/setting_switch_to_other_imes_title" android:key="@string/pref_key_switch_to_other_imes" android:summary="@string/setting_switch_to_other_imes_summary" />
    <com.google.android.apps.inputmethod.libs.framework.preference.widget.SeekBarListPreference android:persistent="true" android:entries="@array/entries_keyboard_height_ratio" android:title="@string/setting_keyboard_height_ratio_title" android:key="@string/pref_key_keyboard_height_ratio" android:defaultValue="@string/pref_def_value_keyboard_height_ratio" android:entryValues="@array/entryvalues_keyboard_height_ratio" seek_bar_text_left="@string/setting_keyboard_height_ratio_text_left" seek_bar_text_right="@string/setting_keyboard_height_ratio_text_right" />
    <com.google.android.apps.inputmethod.libs.framework.preference.widget.SeekBarListPreference android:persistent="true" android:entries="@array/entries_keyboard_slide_sensitivity_ratio" android:title="@string/setting_keyboard_slide_sensitivity_ratio_title" android:key="@string/pref_key_keyboard_slide_sensitivity_ratio" android:defaultValue="@string/pref_def_value_keyboard_slide_sensitivity_ratio" android:entryValues="@array/entryvalues_keyboard_slide_sensitivity_ratio" seek_bar_text_left="@string/setting_keyboard_slide_sensitivity_ratio_text_left" seek_bar_text_right="@string/setting_keyboard_slide_sensitivity_ratio_text_right" />
    <com.google.android.apps.inputmethod.libs.framework.preference.widget.SeekBarListPreference android:persistent="true" android:entries="@array/entries_key_long_press_delay" android:title="@string/setting_key_long_press_delay_title" android:key="@string/pref_key_key_long_press_delay" android:defaultValue="@string/pref_def_value_key_long_press_delay" android:entryValues="@array/entryvalues_key_long_press_delay" seek_bar_text_left="@string/setting_key_long_press_delay_text_left" seek_bar_text_right="@string/setting_key_long_press_delay_text_right" />
</PreferenceScreen>