<?xml version="1.0" encoding="utf-8"?>
<framework>
    <include href="@xml/softkeys_input_symbol_templates" />
    <include href="@xml/softkeys_input_symbol_numbers" />
    <include href="@xml/softkeys_input_symbol_basic_symbols" />
    <softkeys>
        <softkey_list template_id="@id/softkey_template_light_symbol">
            <softkey param_data="“" desc="@string/left_double_quotation_key_content_desc" />
            <softkey param_data="”" desc="@string/right_double_quotation_key_content_desc" />
            <softkey param_data="=" />
            <softkey param_data="…" />
            <softkey param_data="、" desc="@string/slight_pause_mark_key_content_desc" />
            <softkey param_data="：" desc="@string/full_width_colon_key_content_desc" />
            <softkey param_data="；" desc="@string/full_width_semicolon_key_content_desc" />
            <softkey param_data="？" desc="@string/full_width_question_mark_key_content_desc" />
            <softkey param_data="！" desc="@string/full_width_exclamation_key_content_desc" />
            <softkey param_data="～" desc="@string/full_width_tilde_key_content_desc" />
            <softkey param_data="+" />
            <softkey param_data="-" desc="@string/minus_key_content_desc" />
            <softkey param_data="/" />
            <softkey param_data="\\" />
            <softkey param_data="|" />
            <softkey param_data="[" />
            <softkey param_data="]" />
            <softkey param_data="{" />
            <softkey param_data="}" />
            <softkey param_data="·" desc="@string/middle_dot_key_content_desc" />
            <softkey param_data="&lt;" />
            <softkey param_data=">" />
            <softkey param_data="—" />
            <softkey param_data="_" />
            <softkey param_data="‘" desc="@string/left_single_quotation_key_content_desc" />
            <softkey param_data="’" desc="@string/right_single_quotation_key_content_desc" />
            <softkey param_data="'" />
            <softkey param_data="&quot;" />
            <softkey param_data="," />
            <softkey param_data="." />
            <softkey param_data="`" />
            <softkey param_data=":" />
            <softkey param_data=";" />
            <softkey param_data="\?" />
            <softkey param_data="~" />
            <softkey param_data="／" />
            <softkey param_data="『" desc="@string/left_vertical_double_quotation_key_content_desc" />
            <softkey param_data="』" desc="@string/right_vertical_double_quotation_key_content_desc" />
            <softkey param_data="「" desc="@string/left_vertical_single_quotation_key_content_desc" />
            <softkey param_data="」" desc="@string/right_vertical_single_quotation_key_content_desc" />
        </softkey_list>
    </softkeys>
    <include href="@xml/softkeys_input_symbol_other_symbols" />
</framework>