<?xml version="1.0" encoding="utf-8"?>
<framework>
    <softkeys>
        <softkey_list template_id="@id/softkey_template_light_symbol">
            <softkey param_data="（" desc="@string/full_width_left_parenthesis_key_content_desc" />
            <softkey param_data="）" desc="@string/full_width_right_parenthesis_key_content_desc" />
            <softkey param_data="〔" desc="@string/left_hexagon_bracket_key_content_desc" />
            <softkey param_data="〕" desc="@string/right_hexagon_bracket_key_content_desc" />
            <softkey param_data="〈" desc="@string/single_left_book_title_key_content_desc" />
            <softkey param_data="〉" desc="@string/single_right_book_title_key_content_desc" />
            <softkey param_data="《" desc="@string/double_left_book_title_key_content_desc" />
            <softkey param_data="》" desc="@string/double_right_book_title_key_content_desc" />
            <softkey param_data="【" desc="@string/left_black_square_bracket_key_content_desc" />
            <softkey param_data="】" desc="@string/right_black_square_bracket_key_content_desc" />
            <softkey param_data="→" desc="@string/right_arrow_key_content_desc" />
            <softkey param_data="←" desc="@string/left_arrow_key_content_desc" />
            <softkey param_data="↑" desc="@string/up_arrow_key_content_desc" />
            <softkey param_data="↓" desc="@string/down_arrow_key_content_desc" />
            <softkey param_data="↔" />
            <softkey param_data="■" />
            <softkey param_data="□" />
            <softkey param_data="●" />
            <softkey param_data="○" />
            <softkey param_data="★" />
            <softkey param_data="☆" />
            <softkey param_data="◆" />
            <softkey param_data="◇" />
            <softkey param_data="♀" />
            <softkey param_data="♂" />
            <softkey param_data="￥" />
            <softkey param_data="€" />
            <softkey param_data="£" />
            <softkey param_data="¢" />
            <softkey param_data="π" />
            <softkey param_data="¹" />
            <softkey param_data="²" />
            <softkey param_data="³" />
            <softkey param_data="©" />
            <softkey param_data="®" />
            <softkey param_data="°" />
            <softkey param_data="‰" />
            <softkey param_data="§" />
            <softkey param_data="※" />
            <softkey param_data="℃" />
            <softkey param_data="∑" />
            <softkey param_data="∏" />
            <softkey param_data="∫" />
            <softkey param_data="√" />
            <softkey param_data="±" />
            <softkey param_data="∪" />
            <softkey param_data="∩" />
            <softkey param_data="∵" />
            <softkey param_data="∴" />
            <softkey param_data="∞" />
            <softkey param_data="≈" />
            <softkey param_data="≠" />
            <softkey param_data="×" />
            <softkey param_data="÷" />
            <softkey param_data="∅" />
            <softkey param_data="♡" />
            <softkey param_data="♠" />
            <softkey param_data="♥" />
            <softkey param_data="♣" />
            <softkey param_data="♦" />
        </softkey_list>
    </softkeys>
</framework>