<?xml version="1.0" encoding="utf-8"?>
<framework>
    <softkeys>
        <softkey_template id="@+id/softkey_template_9key_left_panel" layout="@layout/softkey_9key_left_panel" popup_timing="ON_TOUCH" content_description="$desc$">
            <action type="PRESS" data="$press_data$" keycode="PLAIN_TEXT" intention="COMMIT" />
            <label location="@id/label" value="$press_data$" />
        </softkey_template>
        <softkey_list template_id="@id/softkey_template_9key_left_panel">
            <softkey id="@id/softkey_question_zh" press_data="？" desc="@string/full_width_question_mark_key_content_desc" />
            <softkey id="@id/softkey_exclamation_zh" press_data="！" desc="@string/full_width_exclamation_key_content_desc" />
            <softkey id="@id/softkey_ellipsis_zh" press_data="…" desc="@string/full_width_ellipsis_key_content_desc" />
            <softkey id="@id/softkey_wave_zh" press_data="～" desc="@string/full_width_tilde_key_content_desc" />
            <softkey id="@id/softkey_left_paren_zh" press_data="（" desc="@string/full_width_left_parenthesis_key_content_desc" />
            <softkey id="@id/softkey_right_paren_zh" press_data="）" desc="@string/full_width_right_parenthesis_key_content_desc" />
            <softkey id="@id/softkey_colon_zh" press_data="：" desc="@string/full_width_colon_key_content_desc" />
        </softkey_list>
        <softkey id="@id/softkey_question_zh_dark_key" layout="@layout/softkey_9key_darkkey_left_panel" popup_timing="ON_TOUCH">
            <action type="PRESS" data="？" keycode="PLAIN_TEXT" intention="COMMIT" />
            <label location="@id/label" value="？" />
        </softkey>
    </softkeys>
</framework>