<?xml version="1.0" encoding="utf-8"?>
<framework>
    <softkeys>
        <softkey id="@id/softkey_candidate_del" layout="@layout/softkey_icon" multi_touch="true" content_description="@string/delete_key_content_desc">
            <action type="PRESS" keycode="DEL" repeatable="true" />
            <icon location="@id/icon" value="@drawable/ic_key_del" />
        </softkey>
        <softkey id="@id/softkey_candidate_del_composing" layout="@layout/softkey_icon" multi_touch="false" popup_timing="ON_GESTURE" slide_sensitivity="LESS" content_description="@string/delete_key_content_desc">
            <action type="PRESS" keycode="DEL" repeatable="true" />
            <action type="SLIDE_LEFT" keycode="CLEAR_ALL" popup_label="@string/label_clear_key" popup_layout="@layout/popup_small_square_bubble_no_cancelable" />
            <icon location="@id/icon" value="@drawable/ic_key_del" />
        </softkey>
        <softkey id="@id/softkey_candidate_page_up" layout="@layout/softkey_icon" content_description="@string/page_up_key_content_desc">
            <action type="PRESS" keycode="PAGE_UP" />
            <icon location="@id/icon" value="@attr/IconArrowUp" />
        </softkey>
        <softkey id="@id/softkey_candidate_page_down" layout="@layout/softkey_icon" content_description="@string/page_down_key_content_desc">
            <action type="PRESS" keycode="PAGE_DOWN" />
            <icon location="@id/icon" value="@attr/IconArrowDown" />
        </softkey>
        <softkey id="@id/softkey_candidates_enter" layout="@layout/softkey_icon" content_description="@string/enter_key_content_desc">
            <action type="PRESS" keycode="ENTER" />
            <icon location="@id/icon" value="@drawable/ic_key_enter" />
        </softkey>
        <softkey id="@id/softkey_candidates_enter_plain_text" layout="@layout/softkey_icon" content_description="@string/enter_key_content_desc">
            <action type="PRESS" keycode="PLAIN_TEXT" data="\n" intention="COMMIT" />
            <icon location="@id/icon" value="@drawable/ic_key_enter" />
        </softkey>
        <softkey id="@id/softkey_candidates_switch_to_smiley" layout="@layout/softkey_icon" content_description="@string/smiley_keyboard_key_content_desc">
            <action type="PRESS" keycode="SWITCH_KEYBOARD" data="smiley" />
            <icon location="@id/icon" value="@attr/IconSmileyActive" />
        </softkey>
    </softkeys>
</framework>